src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;


body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.start-node {
  background-color: rgb(34 197 94) !important;
}

.start-node:hover {
  background-color: rgb(102, 231, 149) !important;
}

.end-node {
  background-color: rgb(239 68 68) !important;
}

.end-node:hover {
  background-color: rgb(247, 108, 108) !important;
}

.wall-node {
  background-color: rgb(31 41 55) !important;
}


@keyframes movingNode {
  0% {
    transform: scale(0.6);
  }
  75% {
    transform: scale(0.8);
  }
  100% {
    transform: scale(1);
  }
}

.node-visited {
  animation-name: visitedAnimation;
  animation-duration: 300ms;
  animation-timing-function: linear;
  animation-delay: 0;
  animation-direction: alternate;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
  animation-play-state: running;
}

@keyframes visitedAnimation {
  0% {
    transform: scale(0.6);
    background-color: rgba(0, 0, 66, 0.75);
  }

  50% {
    background-color: rgba(17, 104, 217, 0.75);
  }

  75% {
    transform: scale(1);
    background-color: rgba(0, 217, 159, 0.75);
  }

  100% {
    transform: scale(1);
    background-color: rgba(0, 190, 218, 0.75);
  }
}


.node-shortest-path {
  animation-name: shortestPath;
  animation-duration: 400ms;
  animation-timing-function: linear;
  animation-delay: 0;
  animation-direction: alternate;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
  animation-play-state: running;
}

@keyframes shortestPath {
  0% {
    transform: scale(0.8);
    background-color: rgb(255, 254, 106);
  }

  50% {
    transform: scale(1);
    background-color: rgb(255, 254, 106);
  }

  100% {
    transform: scale(1);
    background-color: rgb(255, 254, 106);
  }
}

